; ModuleID = '/home/carl/AnghaBench/netdata/libnetdata/url/extr_url.c_from_hex.c'
source_filename = "/home/carl/AnghaBench/netdata/libnetdata/url/extr_url.c_from_hex.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local signext i8 @from_hex(i8 signext %0) #0 {
  %2 = alloca i8, align 1
  store i8 %0, i8* %2, align 1
  %3 = load i8, i8* %2, align 1
  %4 = call i64 @isdigit(i8 signext %3)
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %10

6:                                                ; preds = %1
  %7 = load i8, i8* %2, align 1
  %8 = sext i8 %7 to i32
  %9 = sub nsw i32 %8, 48
  br label %16

10:                                               ; preds = %1
  %11 = load i8, i8* %2, align 1
  %12 = call signext i8 @tolower(i8 signext %11)
  %13 = sext i8 %12 to i32
  %14 = sub nsw i32 %13, 97
  %15 = add nsw i32 %14, 10
  br label %16

16:                                               ; preds = %10, %6
  %17 = phi i32 [ %9, %6 ], [ %15, %10 ]
  %18 = trunc i32 %17 to i8
  ret i8 %18
}

declare dso_local i64 @isdigit(i8 signext) #1

declare dso_local signext i8 @tolower(i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
